# LobstersClone

./: .gitignore  Cargo.toml  README.md  default.nix  result
.sqlx/: query-21835e9b2330100c6a5c5cc9f12a7596bc6eafcd0ffb92f68952512a51c0cd2d.json  query-42c697ec5c3be1089847957c6a021106b3ff9c3366af0fd5d76af2dfe4696eb3.json  query-43d0cfbebb9a5ac825e1fcab08a3600a41c7eba1aba507c3337ec80254e220dc.json  query-45e1273407f46a7861e68a721100ccb1234c9881ea24b084dab8e290ddc4feb5.json  query-528f48625410307d60b73660536ea6e1cafd9c99fbbb53b7bfaebcf97bac28ce.json  query-5adbdf7874fd05ea000977ea7bfb405b975949d05dc7bb94ce8b9e66e14144ed.json  query-65110ce4db1e477b917dffb1d649ed0c8dda297fdb6799e6b06c4dcb8d09083e.json  query-65e8f0db11b5c34825fb4a71d2416f11692e0f1c8edbdc995ee0b45a8b1576c2.json  query-83a5b3bc3a12c51ac57d0b81c059908afee6a85ae865ded8fb2dd0e9de9df0c3.json  query-b8bc50f5ada02545b3786f9a12b0625f540349b56e38214f0b69e51c60a6845e.json  query-d1ec24bdafb79996d598fd0707064fc6766042c1054c8ca379da5fc6a3a03e5a.json
css/: style.css
frontend/: index.html
migrations/: 0001_init.sql  0002_posts_table.sql
server/: .env  Cargo.toml  shell.nix
server/css/: style.css
server/migrations/: 0001_users_table.sql
server/src/: handlers.rs  main.rs  posts.rs  routes.rs  ui.rs  user_posts_api.rs  users.rs
server/src/api/: posts.rs  routes.rs  user_posts_api.rs  users.rs
server/templates/: allusers.html  base.html  editpost.html  focus_post.html  home.html  post.html  posts.html  signup.html  user.html
src/: main.rs  ui.rs
templates/: base.html  focus_post.html  home.html  post.html  (+2 more)
(+5 files in other folders)
